
2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmabi.h: Rename everything to ASM.
	* include/linux/osmdisk.h: Rename everything to ASM.
	* include/linux/osmkernel.h: Rename everything to ASM.
	* kernel/oracleasm.c: Rename everything to ASM.
	* libosm/osmlib.c: Rename internal calls and stuff to ASM.
	* test/sizes.c: Rename things to ASM.
	* tools/osmtool.c: Rename to ASM.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: Move osm.c oracleasm.c.
	* kernel/osm.c: Moved to oracleasm.c.
	* kernel/oracleasm.c: Moved from osm.c.
	* libosm/osmlib.c: Change /dev/osm to /dev/oracleasm.
	* redhat/osm.init: Change /dev/osm to /dev/oracleasm.

2003-11-10	Joel Becker <joel.becker@oracle.com>

	* configure.in: Start the TOOLS/MODULEARCH stuff.
	* Config.make.in: Add TOOLS/MODULEARCH stuff.
	* redhat/osm.init: Some more distro portability.
	* test/Makefile: osmbad added.
	* test/osmbad.c: Added.
	* test/osmtest-multi: Fix the -bin junk.
	* kernel/osm.c: Remove the SCSI-only limitation.
	
2003-10-30	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add rhel3 targets.
	* configure.in: Add rhel3 specfile.
	* kernel/Makefile: Add hugemem target.
	* redhat/Makefile: Add rhel3 specfile.
	* redhat/osm-2.4.21-EL.spec.in: Added.

2003-10-30	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: Support 'hugemem'.
	* kernel/osm.c: Lots of logging.  UNITED_LINUX->UNITEDLINUX.

2003-08-25	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: s/ocfs/osm bug.
	* redhat/osm-2.4.9-e.spec.in: Make it work.
	* test/osmprofile: Remove wrapper.
	* tools/Makefile: osmtool in sbin.

2003-08-25	Joel Becker <joel.becker@oracle.com>

	* configure.in: Add RPM_VERSION.
	* Config.make.in: Add RPM_VERSION.
	* Makefile: Add RHAS srpm and rpm rules.
	* test/{osmtest,osmtest-multi}: Remove wrappers.
	* test/Makefile: Make osmtest and osmtest-multi build with
		-rpath.

2003-08-25	Joel Becker <joel.becker@oracle.com>
